--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
----
-layout: default
----
-
-
-{% include career-profile.html %}
-
-{% unless site.data.data.sidebar.education %}
-  {% include education.html %}
-{% endunless %}
-
-{% include experiences.html %}
-
-{% include projects.html %}
-
-{% include skills.html %}
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://dinakaran.dev/blog/</title>
+<meta http-equiv="refresh" content="0; URL=https://dinakaran.dev/blog/">
+<link rel="canonical" href="https://dinakaran.dev/blog/">
